# FlexingMyCode

./: .gitignore  CMakeLists.txt  Makefile  README.md  coding_questions.md  five_stars.cpp  knights_test.c  knights_tour.cpp  mockmon-main.cpp  mockmon-test.cpp  product_without.c  reverse_sentence  reverse_sentence.c  some_company_home_exam.cpp
.github/workflows/: cmake.yml
include/: calculator.h  coding_questions.h  roman_numerals.h
lib/: calculator.cpp  coding_questions.cpp  roman_numerals.cpp
mockmon/: CMakeLists.txt  Makefile  README.md  main.cpp  mockmon.md  o_makefile
mockmon/include/: arena.h  battle.h  battle_tower.h  condition.h  controller.h  damage_calculations.h  evolution.h  interfaces.h  mockmon_data.h  mockmon_exp.h  mockmon_species.h  moves.h  moves_stats_targeting.h  random_gen.h  specialized_moves.h  speciesId.h  stats.h  trainer.h  trainer_ai.h  types.h
mockmon/include/game_driver/: battle_tower.h  controller.h  main.h
mockmon/include/identifiers/: badges_id.h  condition_id.h  controller_id.h  level_up_groups_id.h  mockmon_species_id.h  moves_id.h  moves_stats_targeting_id.h  non_pulsing_conditions_id.h  priority_id.h  pulsing_conditions_id.h  stat_modifiers_id.h  stats_id.h  trainer_ai_id.h  type_effectiveness_id.h  types_id.h
mockmon/include/mockmon_conditions/: all_conditions.h  base_condition_mockmon_effecting.h  base_conditon_pulse.h  burn_condition_pulse.h  confusion_condition_pulse.h  empty_condition_pulse.h  flinch_condition_pulse.h  freeze_condition_pulse.h  light_screen_condition_pulse.h  paralysis_condition_pulse.h  poison_conditon_pulse.h  reflect_condition_pulse.h  sleep_condition_pulse.h
mockmon/include/stats/: battle_stats.h  single_stats.h  stats.h
mockmon/lib/: arena.cpp  battle.cpp  battle_tower.cpp  condition.cpp  controller.cpp  damage_calculations.cpp  evolution.cpp  interfaces.cpp  main.cpp  mockmon_data.cpp  mockmon_exp.cpp  mockmon_species.cpp  moves.cpp  random_gen.cpp  specialized_moves.cpp  speciesId.cpp  stats.cpp  trainer.cpp  trainer_ai.cpp  types.cpp
mockmon/lib/constants dictionaries/: constat_moves_wrappers_dict.cpp  mockmon_species_dict.cpp  moves_stats_targeting_dict.cpp  simple_moves_dict.cpp  specialized_ex_moves_dict.cpp  type_effectiveness_char_dict.cpp
mockmon/lib/game_driver/: battle_tower.cpp  controller.cpp  main.cpp
mockmon/lib/identifiers/: badges_id.cpp  condition_id.cpp  controller_id.cpp  level_up_groups_id.cpp  mockmon_species_id.cpp  moves_id.cpp  moves_stats_targeting_id.cpp  non_pulsing_conditions_id.cpp  priority_id.cpp  pulsing_conditions_id.cpp  stat_modifiers_id.cpp  stats_id.cpp  trainer_ai_id.cpp  type_effectiveness_id.cpp  types_id.cpp
mockmon/lib/stats/: battle_stats.cpp  stats.cpp
mockmon/resouces/: diagram.txt
mockmon/resouces/uml/: battle.puml  evolution.puml  move.puml
mockmon_testing/: CMakeLists.txt  badges_testing.cpp  battle_testing.cpp  conditions_testing.cpp  mockmon_test.cpp  test_examples.cpp
mockmon_testing/include/: mockmon_test_utils.h
test/: calculator_test.c  coding_questions_test.cpp  roman_numerals_test.cpp
testing/: mockmon_test.cpp
